syntax = 'proto3';

option java_multiple_files = true;
option java_package = "com.zwl.grpc";
option java_outer_classname = "HelloWorldProto";

service HelloService{
  rpc sayHello (HelloReq) returns (HelloResp){}
}


message HelloReq{
  string name = 1;
}

message HelloResp{
  string msg = 1;
}